--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -1,3 +1,40 @@
+@online {Deep18,
+  author = {AWS},
+  title = {AWS Announces the DeepRacer League (DRL)},
+  year = 2018,
+  url = {https://press.aboutamazon.com/2018/11/aws-announces-the-deepracer-league-drl}
+}
+
+@online {Price,
+  author = {AWS},
+  title = {AWS DeepRacer Pricing},
+  year = 2023,
+  url = {https://aws.amazon.com/deepracer/pricing/?loc=ft#Free_Tier}
+}
+
+@online {League,
+  author = {AWS},
+  title = {AWS DeepRacer League},
+  year = 2023,
+  url = {https://aws.amazon.com/deepracer/league/}
+}
+
+@online {Car,
+  author = {Amazon},
+  title = {AWS DeepRacer – Fully autonomous 1/18th scale race car for developers | With open source projects},
+  year = 2018,
+  url = {https://www.amazon.com/AWS-DeepRacer-Fully-autonomous-developers/dp/B07JMHRKQG}
+}
+
+@online{Amz23,
+  author = {AWS},
+  title = {AWS Deepracer},
+  year = 2023,
+  url = {https://aws.amazon.com/deepracer/},
+}
+
+
+
 @inproceedings{Pey17,
   author    = {Simon {Peyton Jones}},
   title     = {How to Write a Great Research Paper},
@@ -5,7 +42,6 @@
                26-27, 2017, London, {UK}},
   pages     = {1:1--1:1},
   year      = {2017},    
-  
 }
 
 @book{Wil09,
