--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -7,40 +7,43 @@
   year={2020},
   organization={IEEE}
 }
-@online{DeepracerMain,
+@misc{DeepracerMain,
   author = {AWS},
   title = {AWS Deepracer},
   year = 2023,
   url = {https://aws.amazon.com/deepracer/},
 }
-@online{DeepracerAnnounced,
+@misc{DeepracerAnnounced,
   author = {Amazon},
   title = {AWS Announces the DeepRacer League},
   year = 2018,
-  url = {https://press.aboutamazon.com/2018/11/aws-announces-the-deepracer-league-drl}
+  howpublished = "\url{https://press.aboutamazon.com/2018/11/aws-announces-the-deepracer-league-drl}",
+  note={Last accessed: 2023-03-22}
 }
-@online{DeepracerFollowTheLeader,
+@misc{DeepracerFollowTheLeader,
   author = {{AWS DeepRacer team}},
   title = {AWS DeepRacer Follow the Leader (FTL) sample project},
   year = 2022,
-  url = {https://github.com/aws-deepracer/aws-deepracer-follow-the-leader-sample-project/}
+  howpublished = "\url{https://github.com/aws-deepracer/aws-deepracer-follow-the-leader-sample-project/}",
+  note={Last accessed: 2023-03-22}
 }
-@online{DeepracerOffRoad,
+@misc{DeepracerOffRoad,
   author = {{AWS DeepRacer team}},
   title = {AWS DeepRacer Offroad launcher package},
   year = 2022,
-  url = {https://github.com/aws-deepracer/aws-deepracer-offroad-sample-project/}
+  howpublished = "\url{https://github.com/aws-deepracer/aws-deepracer-offroad-sample-project/}",
+  note={Last accessed: 2023-03-22}
 }
 
 
 % ========== FORMULA PI ==========
-@online{FormulaPiMain,
+@misc{FormulaPiMain,
   author = {{Formula Pi}},
   title = {Formula Pi},
   year = 2023,
   url = {https://www.formulapi.com/}
 }
-@online{PiBorg,
+@misc{PiBorg,
   author = {PiBorg},
   title = {PiBorg},
   year = 2023,
@@ -49,11 +52,12 @@
 
 
 % ========== Communication Technology ==========
-@online{webbluetooth,
+@misc{webbluetooth,
   author = {Mozilla},
   title = {Web Bluetooth API - Web APIs},
   year = 2023,
-  url = {https://developer.mozilla.org/en-US/docs/Web/API/Web_Bluetooth_API}
+  howpublished = "\url{https://developer.mozilla.org/en-US/docs/Web/API/Web_Bluetooth_API}",
+  note={Last accessed: 2023-03-25}
 }
 
 @article{pena2020uart,
@@ -63,30 +67,34 @@
   volume={54},
   number={4},
   year={2020},
-  url={https://www.analog.com/en/analog-dialogue/articles/uart-a-hardware-communication-protocol.html}
+  howpublished= "\url{https://www.analog.com/en/analog-dialogue/articles/uart-a-hardware-communication-protocol.html}",
+  note={Last accessed: 2023-03-25}
 }
 
-@online{uartjs,
+@misc{uartjs,
   author = {Espruino},
   title = {UART.js Library},
   year = 2017,
-  url = {http://www.espruino.com/UART.js}
+  howpublished = "\url{http://www.espruino.com/UART.js}",
+  note={Last accessed: 2023-03-25}
 }
 
 
 % ========== SMARTPHONES IN ROBOTICS ==========
-@online{comma,
+@misc{comma,
   author = {Comma},
   title = {comma.ai - make driving chill},
   year = 2022,
-  url = {https://comma.ai/}
+  howpublished = "\url{https://comma.ai/}",
+  note={Last accessed: 2023-03-20}
 }
 
-@online{osmarketshare,
+@misc{osmarketshare,
   author = {GlobalStats},
   title = {Mobile Operating System Market Share Worldwide},
   year = 2023,
-  url = {https://gs.statcounter.com/os-market-share/mobile/worldwide}
+  howpublished = "\url{https://gs.statcounter.com/os-market-share/mobile/worldwide}",
+  note={Last accessed: 2023-03-21}
 }
 
 @article{oros2013smartphone,
@@ -133,11 +141,12 @@
   organization={IEEE}
 }
 
-@online{tensorflowlite,
+@misc{tensorflowlite,
   author = {TensorFlow},
   title = {TensorFlow Lite},
   year = 2023,
-  url = {https://www.tensorflow.org/lite}
+  howpublished = "\url{https://www.tensorflow.org/lite}",
+  note={Last accessed: 2023-03-28}
 }
 
 @article{nasereddin2010smartphone,
@@ -148,30 +157,32 @@
   number={4},
   pages={399--404},
   year={2010},
-  publisher={Academic Research Publishing Agency, Suite 2 Islamabad Pakistan},
-  url={https://www.researchgate.net/profile/Hebah-H-O-Nasereddin/publication/47447013_SMARTPHONE_CONTROL_ROBOTS_THROUGH_BLUETOOTH/links/0912f50c735336cb39000000/SMARTPHONE-CONTROL-ROBOTS-THROUGH-BLUETOOTH.pdf}
+  publisher={Academic Research Publishing Agency, Suite 2 Islamabad Pakistan}
 }
 
-@online{webbluetoothespruino,
+@misc{webbluetoothespruino,
   author={Espruino},
   year={2017},
   title = {Using Web Bluetooth with Espruino},
-  url = {https://www.espruino.com/Web\%20Bluetooth},
+  howpublished = "\url{https://www.espruino.com/Web\%20Bluetooth}",
+  note={Last accessed: 2023-03-21}
 }
 
-@online{bluetoothquickstartespruino,
+@misc{bluetoothquickstartespruino,
   author={Espruino},
   year={2017},
   title = {Quick Start (Bluetooth LE) - Espruino},
-  url = {http://www.espruino.com/Quick+Start+BLE},
+  howpublished = "\url{http://www.espruino.com/Quick+Start+BLE}",
+  note={Last accessed: 2023-03-21}
 }
 
-@online{bluetoothlimitations,
+@misc{bluetoothlimitations,
   author={McClain, S.},
   organization={Techwalla},
   year={2017},
   title = {What Are the Limitations of Bluetooth?},
-  url = {https://www.techwalla.com/articles/what-are-the-limitations-of-bluetooth},
+  howpublished = "\url{https://www.techwalla.com/articles/what-are-the-limitations-of-bluetooth}",
+  note={Last accessed: 2023-03-21}
 }
 
 
@@ -185,11 +196,12 @@
   organization={IEEE}
 }
 
-@online{zumolinefollower,
+@misc{zumolinefollower,
   author = {Pololu},
   title = {zumo-shield/LineFollower.ino},
   year = 2013,
-  url = {https://github.com/pololu/zumo-shield/blob/master/ZumoExamples/examples/LineFollower/LineFollower.ino}
+  howpublished = "\url{https://github.com/pololu/zumo-shield/blob/master/ZumoExamples/examples/LineFollower/LineFollower.ino}",
+  note={Last accessed: 2023-03-26}
 }
 
 @inproceedings{imageprocessing,
@@ -233,10 +245,11 @@ title = {REVIEW PAPER ON REAL TIME IMAGE PROCESSING: METHODS, TECHNIQUES, APPLIC
 }
 
 % ========== MISC ==========
-@online{MOSCOW,
+@misc{MOSCOW,
   author={{Agile Business Consortium}},
   title = {MOSCOW Prioritisation},
-  url = {https://www.agilebusiness.org/content/moscow-prioritisation},
+  howpublished = "\url{https://www.agilebusiness.org/dsdm-project-framework/moscow-prioririsation.html}",
+  note={Last accessed: 2023-03-30}
 }
 
 @article{kart2001pulse,
@@ -245,17 +258,20 @@ title = {REVIEW PAPER ON REAL TIME IMAGE PROCESSING: METHODS, TECHNIQUES, APPLIC
   year={2001}
 }
 
-@online{zumopinassignment,
+@misc{zumopinassignment,
   author = {Pololu},
   title = {Pololu - 5. Arduino pin assignment table},
   year = 2023,
-  url = {https://www.pololu.com/docs/0J57/5}
+  howpublished = "\url{https://www.pololu.com/docs/0J57/5}",
+  note={Last accessed: 2023-03-26}
 }
 
-@online{phonespec,
+@misc{phonespec,
   author = {GSMarena},
   title = {Samsung Galaxy A50 - Full Phone Specifications},
-  url = {https://www.gsmarena.com/samsung_galaxy_a50-9554.php}
+  year = 2023,
+  howpublished = "\url{https://www.gsmarena.com/samsung_galaxy_a50-9554.php}",
+  note={Last accessed: 2023-03-24}
 }
 
 @article{hoober2017design,
@@ -265,10 +281,12 @@ title = {REVIEW PAPER ON REAL TIME IMAGE PROCESSING: METHODS, TECHNIQUES, APPLIC
   year={2017}
 }
 
-@online{mediadevices,
+@misc{mediadevices,
   author = {Mozilla},
   title = {MediaDevices - Web APIs},
-  url = {https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices}
+  year = 2023,
+  howpublished = "\url{https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices}",
+  note={Last accessed: 2023-03-21}
 }
 
 @INPROCEEDINGS{6166275,
@@ -282,11 +300,12 @@ title = {REVIEW PAPER ON REAL TIME IMAGE PROCESSING: METHODS, TECHNIQUES, APPLIC
   doi={10.1109/SAS.2012.6166275}
 }
 
-@online{exchangerates,
+@misc{exchangerates,
   author = {{Exchange Rates UK}},
   title = {Dollar to Pound Exchange Rate Today},
   year = 2023,
-  url = {https://www.exchangerates.org.uk/Dollars-to-Pounds-currency-conversion-page.html}
+  howpublished = "\url{https://www.exchangerates.org.uk/Dollars-to-Pounds-currency-conversion-page.html}",
+  note={Last accessed: 2023-03-26}
 }
 
 @article{burger2015fast,
@@ -294,4 +313,12 @@ title = {REVIEW PAPER ON REAL TIME IMAGE PROCESSING: METHODS, TECHNIQUES, APPLIC
   author={Burger, Thomas},
   journal={PubNub, February},
   year={2015}
+}
+
+@misc{aruco,
+  author = {OpenCV},
+  title = {Detection of ArUco Markers},
+  year = 2023,
+  howpublished = "\url{https://docs.opencv.org/4.x/d5/dae/tutorial_aruco_detection.html}",
+  note={Last accessed: 2023-03-31}
 }
